try fix vertical; alignment of menu button

--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ and (max-width : 820px) {
     user-select: none;
     margin-left: 4px;
     cursor: pointer;
-    padding-top: 3px;
+    padding-bottom: 2px;
     position: fixed;
     top: 22px;
     left: 16px;
